# Projet4-FashionTrendIntelligence

./: Untitled1.ipynb  pyproject.toml
