[project]
name = "fashion-trend-intelligence"
version = "0.1.0"
description = ""
authors = [
    {name = "Gipsy1403",email = "rouaret.gipsy@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
